@@ -1,3 +1,9 @@
+Thu Nov 29 10:12:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Bug_2677_Regression/server.cpp:
+        * tests/Bug_3542_Regression/server.cpp:
+          Fixed compile problems
+
 Wed Nov 28 14:14:51 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/util/utl_global.cpp (destroy):
